# pytest-config-file-example

./: README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
src/: distance_calculator.py
tests/: test_distance_calculator.py
