[tool.poetry]
name = "distance_calculator"
version = "0.1.0"
description = "Simple Distance Calculator"
authors = ["ericsalesdeandrade <sdaeric19@gmail.com>"]
readme = "README.md"
python = "^3.11"

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
maxversion = "8.0"
filterwarnings = "ignore"

# Specify a custom directory for pytest cache
cache_dir = ".pytest_cache"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"