# setup.cfg

[metadata]
name = distance_calculator
version = attr: my_project.__version__
description = My distance calculator application
author = ericsalesdeandrade
author_email = sdaeric19@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pytest
    tox
    poetry

dev =
    pytest
    tox

[tool:pytest]
addopts = -v
testpaths = tests