# setup.cfg

[metadata]
name = distance_calculator
version = attr: my_project.__version__
description = My distance calculator application
author = ericsalesdeandrade
author_email = sdaeric19@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pytest
    tox
    poetry

dev =
    pytest
    tox

# Including pytest.ini config in setup.cfg
[tool:pytest]
testpaths =
    tests
    integration
addopts = -v -ra -q
log_cli = True
log_cli_level = INFO
log_format = %(asctime)s %(levelname)s %(message)s
log_date_format = %Y-%m-%d %H:%M:%S
minversion = 6.0
maxversion = 8.0
filterwarnings = ignore

# Specify a custom directory for pytest cache
cache_dir = .pytest_cache